--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "extract": "node extractor.js"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "@vueuse/core": "^12.8.2",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
